index added, documentation is reorganized, Some response types has changed. Makefile is organized.
