# docs/swagger.yaml
@@ -3,6 +3,7 @@ definitions:
   entity.AutoMessageSender:
     properties:
       action:
+        example: start/stop
         type: string
     type: object
   entity.Message:
@@ -10,6 +11,13 @@ definitions:
       content:
         type: string
       recipient_phone:
+        type: string
+    type: object
+  v1.autoMessageResponse:
+    properties:
+      Description:
+        type: string
+      status:
         type: string
     type: object
   v1.messageResponse:
@@ -37,7 +45,7 @@ definitions:
 host: localhost:8080
 info:
   contact: {}
-  description: the system send 2 messages in  every 2 minutes
+  description: The system sends 2 messages every 2 minutes.
   title: Automatic Message Sender API
   version: "1.0"
 paths:
@@ -45,11 +53,11 @@ paths:
     post:
       consumes:
       - application/json
-      description: Starts or stops the automatic message sending scheduler based on
-        the provided action.
+      description: Starts or stops the automatic message sender scheduler based on
+        the provided action ("start" or "stop").
       operationId: control-message-scheduler
       parameters:
-      - description: Scheduler action (start or stop)
+      - description: Action for the scheduler (start or stop)
         in: body
         name: action
         required: true
@@ -59,20 +67,20 @@ paths:
       - application/json
       responses:
         "200":
-          description: Operation completed successfully
+          description: Operation completed successfully with a success message
           schema:
-            $ref: '#/definitions/v1.response'
+            $ref: '#/definitions/v1.autoMessageResponse'
         "400":
-          description: Invalid input
+          description: Invalid input or unsupported action
           schema:
-            $ref: '#/definitions/v1.response'
+            $ref: '#/definitions/v1.autoMessageResponse'
         "500":
-          description: Internal server error
+          description: Internal server error while starting or stopping the scheduler
           schema:
-            $ref: '#/definitions/v1.response'
-      summary: Control automatic message sender scheduler
+            $ref: '#/definitions/v1.autoMessageResponse'
+      summary: Control the automatic message sender scheduler
       tags:
-      - scheduler
+      - Scheduler
   /messages:
     post:
       consumes:
