# internal/controller/http/v1/auto_message_sender.go
@@ -23,16 +23,21 @@ func newAutoMessageSenderRoutes(handler *gin.RouterGroup, a usecase.AutoMessager
 	}
 }
 
-// @Summary     Control automatic message sender scheduler
-// @Description Starts or stops the automatic message sending scheduler based on the provided action.
+type autoMessageResponse struct {
+	Description string `json:"Description"`
+	Status      string `json:"status"`
+}
+
+// @Summary     Control the automatic message sender scheduler
+// @Description Starts or stops the automatic message sender scheduler based on the provided action ("start" or "stop").
 // @ID          control-message-scheduler
-// @Tags        scheduler
+// @Tags        Scheduler
 // @Accept      json
 // @Produce     json
-// @Param       action body entity.AutoMessageSender true "Scheduler action (start or stop)"
-// @Success     200 {object} response "Operation completed successfully"
-// @Failure     400 {object} response "Invalid input"
-// @Failure     500 {object} response "Internal server error"
+// @Param       action body entity.AutoMessageSender true "Action for the scheduler (start or stop)"
+// @Success     200 {object} autoMessageResponse "Operation completed successfully with a success message"
+// @Failure     400 {object} autoMessageResponse "Invalid input or unsupported action"
+// @Failure     500 {object} autoMessageResponse "Internal server error while starting or stopping the scheduler"
 // @Router      /automatic-message-sender [post]
 func (r *autoMessageSenderRoutes) ControlMessageScheduler(c *gin.Context) {
 	var req entity.AutoMessageSender
@@ -40,7 +45,10 @@ func (r *autoMessageSenderRoutes) ControlMessageScheduler(c *gin.Context) {
 	// Parse the incoming JSON payload
 	if err := c.ShouldBindJSON(&req); err != nil {
 		r.l.Error(err, "http - v1 - ControlMessageScheduler - invalid input")
-		errorResponse(c, http.StatusBadRequest, "Invalid input")
+		c.JSON(http.StatusBadRequest, autoMessageResponse{
+			Status:      "error",
+			Description: "Invalid input",
+		})
 		return
 	}
 
@@ -50,23 +58,38 @@ func (r *autoMessageSenderRoutes) ControlMessageScheduler(c *gin.Context) {
 		err := r.a.StartAutoMessageSender(c.Request.Context())
 		if err != nil {
 			r.l.Error(err, "http - v1 - ControlMessageScheduler - start error")
-			errorResponse(c, http.StatusInternalServerError, "Failed to start scheduler")
+			c.JSON(http.StatusInternalServerError, autoMessageResponse{
+				Status:      "error",
+				Description: "Failed to start scheduler",
+			})
 			return
 		}
-		c.JSON(http.StatusOK, gin.H{"message": "Message scheduler started successfully"})
+		c.JSON(http.StatusOK, autoMessageResponse{
+			Status:      "success",
+			Description: "Message scheduler started successfully",
+		})
 
 	case "stop":
 		// Stop the scheduler
 		err := r.a.StopAutoMessageSender(c.Request.Context())
 		if err != nil {
 			r.l.Error(err, "http - v1 - ControlMessageScheduler - stop error")
-			errorResponse(c, http.StatusInternalServerError, "Failed to stop scheduler")
+			c.JSON(http.StatusInternalServerError, autoMessageResponse{
+				Status:      "error",
+				Description: "Failed to stop scheduler",
+			})
 			return
 		}
-		c.JSON(http.StatusOK, gin.H{"message": "Message scheduler stopped successfully"})
+		c.JSON(http.StatusOK, autoMessageResponse{
+			Status:      "success",
+			Description: "Message scheduler stopped successfully",
+		})
 
 	default:
 		// Handle invalid actions
-		errorResponse(c, http.StatusBadRequest, "Invalid action. Use 'start' or 'stop'")
+		c.JSON(http.StatusBadRequest, autoMessageResponse{
+			Status:      "error",
+			Description: "Invalid action. Use 'start' or 'stop'",
+		})
 	}
 }
